--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,9 +73,9 @@ flutter:
         - asset: assets/fonts/CedarvilleCursive-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: CustomIcons
+      fonts:
+        - asset: assets/icons/CustomIcons.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
