--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  carousel_pro: ^1.0.0
+  carousel_slider: ^4.0.0
   flutter_sms: ^2.3.1
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
