--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter_sms: ^2.3.1
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
+  http: ^0.13.3
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
