--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/drawable/
+    - assets/drawable/resto_building.svg
+    - assets/drawable/resto_profile.svg
     - assets/drawable_png/
     - assets/icons/
     - assets/icon_app.png
