update style all home screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ flutter:
   assets:
     - assets/drawable/resto_building.svg
     - assets/drawable/resto_profile.svg
+    - assets/drawable/kw.svg
     - assets/drawable_png/
     - assets/icons/
     - assets/icon_app.png
