--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
   flutter_sms: ^2.3.1
+  shimmer: ^2.0.0-nullsafety.0
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
   http: ^0.13.3
