--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
   http: ^0.13.3
+  unicorndial: ^1.1.5
   flutter_svg: ^0.22.0
 
 dev_dependencies:
