--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   firebase_core: ^1.3.0
   http: ^0.13.3
   flutter_svg: ^0.22.0
+  speed_dial_fab: ^2.1.1
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
