--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
   http: ^0.13.3
+  provider: ^5.0.0
   flutter_svg: ^0.22.0
   speed_dial_fab: ^2.1.1
   url_launcher: ^6.0.9
