--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shimmer: ^2.0.0-nullsafety.0
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
+  shared_preferences: ^2.0.6
   http: ^0.13.3
   provider: ^5.0.0
   flutter_svg: ^0.22.0
